--- a/Areas/Admin/Views/Service/Edit.cshtml
+++ b/Areas/Admin/Views/Service/Edit.cshtml
@@ -34,6 +34,11 @@
                             <input asp-for="Duration" class="form-control" />
                             <span asp-validation-for="Duration" class="text-danger" />
                         </div>
+                        <div class="form-group mt-2">
+                            <label class="form-label">chương trình khuyến mãi</label>
+                            <input asp-for="SpecialOffer" class="form-control" />
+                            <span asp-validation-for="SpecialOffer" class="text-danger" />
+                        </div>
 
                         <div class="form-group mt-2">
                             <label class="form-label">Mô tả</label>
